Modified charcoal verse translation in T-A from "dyed" to "tainted"

--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -271,7 +271,7 @@ her sides <span class="color-word">blackened</span> entirely.<br>
 Her mouth was thinned,<br>
 and all around it <span class="color-word">blackened</span>,<br>
 and her chin was so <span class="color-word">black<br></span>
-<span class="unique-verse">as though it were <span class="color-word">dyed with charcoal</span>.<br></span>
+<span class="unique-verse">as though it were <span class="color-word">tainted with charcoal</span>.<br></span>
 <span class="unique-verse">Thinned</span> were her eyes.<br>
 There was <span class="negation">not a shred</span> of pride now.<br>
 If you saw her ears,<br>
