--- a/portraits.qmd
+++ b/portraits.qmd
@@ -252,7 +252,7 @@ It turned white like an ermine.<br>
 Her mouth was thinned,<br>
 and all around it blackened,<br>
 and her chin was so black<br>
-as though it were dyed with charcoal.<br>
+as though it were tainted with charcoal.<br>
 Thinned were her eyes.<br>
 There was not a shred of pride now.<br>
 If you saw her ears,<br>
