--- a/portraits.qmd
+++ b/portraits.qmd
@@ -795,7 +795,7 @@ from her underarm along her rib.<br>
 She was neither too big nor too small.<br>
 Her frame could never be described.<br>
 Nor could the beauty of this lady<br>
-ever be described by any man.<br>
+ever be described by any soul.<br>
 She was so courteous of speech.<br>
 There was nothing to improve.<br>
 Such a creature makes one lament<br>
