Updated page numbers in Emma Campbell reference for T-B bibliography

--- a/references.qmd
+++ b/references.qmd
@@ -209,7 +209,7 @@ Section romane, notice de “Paris, Bibliothèque nationale de France, Manuscrit
 
 
 ## Oxford, Bodleian, Canonici Misc. 74 (T-B)
-Campbell, Emma. *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography*. Boydell & Brewer, 2008, pp. 236-237.
+Campbell, Emma. *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography*. Boydell & Brewer, 2008, pp. 205-222; 236-237; 240-241.
 
 “Canonici.” Digital Bodleian, https://digital.bodleian.ox.ac.uk/collections/canonici/.
 
