Added Emma Campbell's edition of Version R to bibliography

--- a/references.qmd
+++ b/references.qmd
@@ -134,6 +134,8 @@ Rudder, Orlando de. “La version X de *La vie de sainte Marie l'Egyptienne*. Mi
 
 Rutebeuf. “La Vie de Sainte Marie L’Égyptienne.” *Œuvres complètes*. edited by Michel Zink, Le Livre de Poche, 2001, pp. 453-529.
 
+---. “Vie de Sainte Marie l’Egyptienne.” Œuvres complètes de Rutebeuf. Edited by Julia Bastin and Edmond Faral, vol. 2, 1960, pp. 9-59.
+
 Sargent, Anne Marie. “The Penitent Prostitute: The Tradition and Evolution of the Life of St. Mary the Egyptian.” *Dissertation Abstracts International - A: The Humanities and Social Sciences*, vol. 83, no. 3, 1977, pp. 1375–76. 
 
 Scarborough, Connie L. “Seeing and Believing: the Gaze in the *Vida de Santa María Egipçiaca*.” *La Corónica*, vol. 42, no. 1, 2013, pp. 299-319.
