--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "An Approach to Editing Version T, Part 1"
+title: "2.1 An Approach to Editing Version T, Part 1"
 ---
 
 This is the first part of the second chapter of my Quarto book...
