--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -174,6 +174,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>asdens les ront quele ot trencans</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.690 to remove apostrophe in "qu'ele"
+    if (line_count == 690) {
+      return("<div style='line-height: 1.2;'>Quele jadis soloit amer</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
